fix(fonts-flickering): fixed fonts flickering issue on pages

--- a/gatsby-theme-mds/src/css/style.css
+++ b/gatsby-theme-mds/src/css/style.css
@@ -1,11 +1,3 @@
-html {
-  scroll-behavior: smooth;
-}
-
-* {
-  box-sizing: border-box;
-}
-
 .in-page-nav {
   position: sticky;
   top: 0;
